// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withMessages correctly injects and updates messages state 1`] = `
<div>
  <button>
    Click
  </button>
</div>
`;

exports[`withMessages correctly injects and updates messages state 2`] = `
<div>
  <button>
    Click
  </button>
  <div>
    test
  </div>
</div>
`;
